# radar_legislativo

./: Andley.md  main.py  pyproject.toml
core/: exceptions.py
src/: extract.py
