[project]
name = "radar-legislativo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging>=0.4.9.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
